WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67356
REGRESSION (
r94093
): Private browsing doesn't start with a clean state on Snow Leopard
https://bugs.webkit.org/show_bug.cgi?id=67356
Summary
REGRESSION (r94093): Private browsing doesn't start with a clean state on Sno...
Khoo Yit Phang
Reported
2011-08-31 21:13:04 PDT
There appears to have been a change in Safari's Private Browsing behavior between the
r94061
and
r94145
nightlies in the following scenario: 1) log in to some website (e.g., facebook.com or gmail.com); 2) turn on Private Browsing; 3) reload the website in step 1. In
r94061
, reloading in step 3 be logged out as if cookies were reset; whereas in
r94145
, reloading in step 3 would remain logged in. Looking at the SVN commit logs between these revisions, there doesn't seem to be any that explicitly calls out such a change, though
r94093
appears to be related to cookies. Is this an expected change? I much rather prefer the old behavior as it is more thorough in ensuring privacy.
Attachments
proposed fix
(1.92 KB, patch)
2011-09-01 16:43 PDT
,
Alexey Proskuryakov
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-09-01 10:20:32 PDT
Per your analysis, it seems likely that I broke something, will investigate ASAP.
Alexey Proskuryakov
Comment 2
2011-09-01 11:45:18 PDT
This only happens on Snow Leopard, not on Lion. Investigating...
Alexey Proskuryakov
Comment 3
2011-09-01 16:43:55 PDT
Created
attachment 106062
[details]
proposed fix
WebKit Review Bot
Comment 4
2011-09-01 17:22:16 PDT
Comment on
attachment 106062
[details]
proposed fix Rejecting
attachment 106062
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: f0d9405ba69418331dcdfeb2b468b45aa2d1040f
r94371
= 8b34cc661db8cceb5d89e4be6eecf8ad466a75fc Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/9586217
Alexey Proskuryakov
Comment 5
2011-09-01 21:48:52 PDT
Comment on
attachment 106062
[details]
proposed fix What did that mean?
WebKit Review Bot
Comment 6
2011-09-01 22:48:04 PDT
Comment on
attachment 106062
[details]
proposed fix Rejecting
attachment 106062
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: d546a50615913604e5f2b269d0f7ca6ccf93b070
r94386
= 5e8e385bd2e33d41d28bd86612dafef1390d00bd Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/9581597
Alexey Proskuryakov
Comment 7
2011-09-01 23:25:56 PDT
Ah right, I accidentally removed reviewer line. Will fix and land manually.
Alexey Proskuryakov
Comment 8
2011-09-02 12:38:54 PDT
Committed <
trac.webkit.org/r94426
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug