        REGRESSION (r94093): Private browsing doesn't start with a clean state on Snow Leopard         https://bugs.webkit.org/show_bug.cgi?id=67356

Reviewed by Darin Adler.

        * platform/network/mac/CookieStorageMac.mm: (WebCore::setCookieStoragePrivateBrowsingEnabled):
        Don't enable old-style private browsing when using sessions - it would take precedence over
        session cookie storage on Snow Leopard.



git-svn-id: svn://svn.chromium.org/blink/trunk@94426 bbb929c8-8fbe-4397-9dbb-9b2b20218538