third_party/WebKit/Source/WebCore/platform/network/mac/CookieStorageMac.mm
@@ -26,6 +26,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "config.h"
 #include "CookieStorage.h"
+#include "CookieStorageCFNet.h"
 
 #import "ResourceHandle.h"
 
@@ -79,6 +80,15 @@ namespace WebCore {
 
 void setCookieStoragePrivateBrowsingEnabled(bool enabled)
 {
+#if BUILDING_ON_SNOW_LEOPARD && USE(CFURLSTORAGESESSIONS)
+    // Don't call wkSetCookieStoragePrivateBrowsingEnabled() when cookie storage is set up via sessions.
+    // That would make NSURLConnect use global private browsing cookie storage regardless of request session.
+    // The global private cookie storage has different semantics - it makes new cookies non-persistent,
+    // but doesn't start with a clean state.
+    if (enabled && currentCFHTTPCookieStorage())
+        return;
+#endif
+
     // FIXME: When Private Browsing is enabled, the Private Browsing Cookie Storage should be
     // observed for changes, not the default Cookie Storage.
 
